# test_task

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: echo_server.cpp  main.cpp
